--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="TestController">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.TestController">
     <children>
         <Button layoutX="122.0" layoutY="30.0" mnemonicParsing="false" onAction="#triggerEncoding" prefHeight="29.0"
                 prefWidth="163.0" text="Encode"/>
