--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.TestController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;"
+            xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controllers.MainController">
     <children>
-        <Button layoutX="122.0" layoutY="30.0" mnemonicParsing="false" onAction="#triggerEncoding" prefHeight="29.0"
-                prefWidth="163.0" text="Encode"/>
-        <TextArea fx:id="textArea" layoutX="116.0" layoutY="83.0" prefHeight="200.0" prefWidth="369.0"/>
-        <Button layoutX="301.0" layoutY="30.0" mnemonicParsing="false" onAction="#triggerDecode" prefHeight="29.0"
-                prefWidth="163.0" text="Decode"/>
+        <Button layoutX="179.0" layoutY="69.0" mnemonicParsing="false" onAction="#triggerEncoding" prefHeight="29.0"
+                prefWidth="134.0" text="Encode"/>
+        <TextArea fx:id="textArea" layoutX="179.0" layoutY="108.0" prefHeight="200.0" prefWidth="306.0"/>
+        <Button layoutX="351.0" layoutY="69.0" mnemonicParsing="false" onAction="#triggerDecode" prefHeight="29.0"
+                prefWidth="134.0" text="Decode"/>
+        <Button fx:id="save" layoutX="47.0" layoutY="248.0" mnemonicParsing="false" onAction="#saveToFile"
+                prefHeight="25.0" prefWidth="94.0" text="Save"/>
+        <Button fx:id="openFile" layoutX="47.0" layoutY="283.0" mnemonicParsing="false" onAction="#openFile"
+                prefHeight="25.0" prefWidth="94.0" text="Open"/>
     </children>
 </AnchorPane>
