Task-8. Add Vigenere Cipher.

--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -2,18 +2,22 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;"
-            xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Controllers.MainController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #c0c0c0;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainController">
     <children>
-        <Button layoutX="179.0" layoutY="69.0" mnemonicParsing="false" onAction="#triggerEncoding" prefHeight="29.0"
-                prefWidth="134.0" text="Encode"/>
-        <TextArea fx:id="textArea" layoutX="179.0" layoutY="108.0" prefHeight="200.0" prefWidth="306.0"/>
-        <Button layoutX="351.0" layoutY="69.0" mnemonicParsing="false" onAction="#triggerDecode" prefHeight="29.0"
-                prefWidth="134.0" text="Decode"/>
-        <Button fx:id="save" layoutX="47.0" layoutY="248.0" mnemonicParsing="false" onAction="#saveToFile"
-                prefHeight="25.0" prefWidth="94.0" text="Save"/>
-        <Button fx:id="openFile" layoutX="47.0" layoutY="283.0" mnemonicParsing="false" onAction="#openFile"
-                prefHeight="25.0" prefWidth="94.0" text="Open"/>
+        <Button layoutX="452.0" layoutY="28.0" mnemonicParsing="false" onAction="#triggerEncoding" prefHeight="29.0" prefWidth="134.0" text="Encode" />
+      <ToolBar layoutX="34.0" layoutY="134.0">
+         <items>
+              <TextArea fx:id="textArea" prefHeight="230.0" prefWidth="509.0" />
+            <ScrollBar orientation="VERTICAL" prefHeight="230.0" prefWidth="19.0" />
+         </items>
+      </ToolBar>
+        <Button layoutX="452.0" layoutY="63.0" mnemonicParsing="false" onAction="#triggerDecode" prefHeight="29.0" prefWidth="134.0" text="Decode" />
+        <Button fx:id="save" layoutX="161.0" layoutY="30.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="25.0" prefWidth="61.0" text="Save" textFill="#0bf00a" />
+        <Button fx:id="openFile" layoutX="161.0" layoutY="65.0" mnemonicParsing="false" onAction="#openFile" prefHeight="25.0" prefWidth="61.0" text="Open" textFill="#2806d3" />
+      <ChoiceBox fx:id="CipherChoose" layoutX="237.0" layoutY="30.0" prefWidth="150.0" />
+      <Label layoutX="20.0" layoutY="34.0" text="Choose save directory" AnchorPane.bottomAnchor="349.0" />
+      <Label layoutX="34.0" layoutY="69.0" text="Chhose open file" />
+      <Label layoutX="249.0" layoutY="14.0" text="Choose cipher methode" />
+      <Label layoutX="292.0" layoutY="69.0" text="Label" />
     </children>
 </AnchorPane>
